@@ -3,8 +3,7 @@
 |               PENDING - WORK IN PROGRESS                  |
 |                                                           |
  ===========================================================
-Tester FICS et mode clavier (l 68 de main.tcl) (en plus avec Novag)
-Erreur réseau sous XP avec FICS
+ 
  ===========================================================
 |                                                           |
 |                          BUGS                             |
